--- a/src/PeruShopHub.Web/src/app/pages/purchase-orders/purchase-orders-list.component.scss
+++ b/src/PeruShopHub.Web/src/app/pages/purchase-orders/purchase-orders-list.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: clip;
+  overflow: hidden;
 
   &__action-bar {
     display: flex;
